...
    "change_photo_action" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Change Photo"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cambiar foto"
...
    "choose_from_library_action" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Choose from Library"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Elegir de la biblioteca"
...
    "profile_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Perfil"
...
    "take_photo_action" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Take Photo"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tomar foto"
...
    "use_photo_action" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Use Photo"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Usar foto"
...
